fix: 회원 관심 카테고리 삭제